--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,4 +12,13 @@ layout: default
     {{ content }}
   </article>
 
+
+  {% if site.disqus_short_name %}
+    <section>
+      <h1>Comments</h1>
+      {% include disqus.html %}
+      <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
+    </section>
+  {% endif %}
+
 </div>
