placed analytics js at bottom of body to improve page load times

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  <head>
+    {% include head.html %}
+  </head>
 
   <body>
 
@@ -14,9 +16,7 @@
     </div>
 
     {% include footer.html %}
-
+    {% include analytics.html %}
   </body>
-
-  {% include analytics.html %}
 
 </html>
